--- a/src/components/functional_components/Message/Message.module.css
+++ b/src/components/functional_components/Message/Message.module.css
@@ -9,6 +9,8 @@
     border-radius: 10px;
     padding: 2px 15px;
     position: relative;
+    word-break: break-all;
+    max-width: 80%;
 }
 
 .me{
