Add multiline support, send message on enter press

--- a/src/components/functional_components/Message/Message.module.css
+++ b/src/components/functional_components/Message/Message.module.css
@@ -11,6 +11,12 @@
     position: relative;
     word-break: break-all;
     max-width: 80%;
+    white-space: pre-wrap;
+}
+
+.messageText{ 
+    text-align: left;
+    margin: 0;
 }
 
 .me{
